--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
+    "@mui/x-data-grid": "^5.17.21",
+    "axios": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
